--- a/css/style_load.css
+++ b/css/style_load.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     background: #add7f6;
-    font-family: Montserrat;
+    font-family: system-ui;
 }
 
 html, body{
