--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-	background: #add7f6;
 	font-family: system-ui;
 }
 
 html, body{
     width: 100%;
     height: 100%;
+	background: url("../photo/phon1.jpg");
+	background-size:cover;
 }
 
 div.app{
@@ -35,8 +36,8 @@ div.app > h2{
 
 .btn {
 	position: absolute;
-	width: 11%;
-	height: 7%;
+	width: 15%;
+	height: 10%;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -45,7 +46,7 @@ div.app > h2{
 	min-font-size: 10px;
 	font-family: system-ui;
 	box-sizing: border-box;
-	padding: 0.9% 1.3%;
+	padding: 1.3% 1.3%;
 	margin: 0 10px 10px 0;
 	outline: none;
 	border: none;
@@ -55,7 +56,7 @@ div.app > h2{
 	vertical-align:middle;
 	display:table-cell;
 	font-weight: 700;
-	font-size: calc(8px + 1vw);
+	font-size: calc(14px + 1vw);
 	text-decoration: none;
 	color: #ffffff;
 	background-color: #2286aa;
@@ -70,18 +71,18 @@ div.app > h2{
 
 .btn2 {
 	position: absolute;
-	width: 15%;
+	width: 12.5%;
 	height: 7%;
 	top: 60%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	min-height: 20px;
-	min-width: 120px;
+	min-width: 80px;
 	min-font-size: 10px;
-	max-width: 1000px;
+	max-width: 700px;
 	box-sizing: border-box;
 	padding: 0.9% 1.25%;
-	margin: 0 10px 10px 0;
+	margin: 0 5px 5px 0;
 	outline: none;
 	border: none;
 	border-radius: 5px;
@@ -89,11 +90,12 @@ div.app > h2{
 	text-align: center;
 	vertical-align:middle;
 	display:table-cell;
-	font-weight: 700;
+	font-weight: 600;
 	font-size: calc(8px + 1vw);
 	text-decoration: none;
-	color: #ffffff;
-	background-color: #2286aa;
+	color: #000000;
+	/*background-color: #2286aa;*/
+	background-color: grey;
 	cursor: pointer;
 	user-select: none;
 	appearance: none;
@@ -101,3 +103,5 @@ div.app > h2{
 }
 
 .btn2:hover {background-color: #196480}
+
+
