--- a/css/style_load.css
+++ b/css/style_load.css
@@ -2,19 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: #add7f6;
     font-family: system-ui;
 }
 
 html, body{
     width: 100%;
     height: 100%;
+    background: url("../photo/phon1.jpg");
+    background-size:cover;
 }
 
 div.app{
-    /*position: absolute;*/
-    /*width: 100%;*/
-    /*height: 50%;*/
+    position: relative;
     display: flex;
     justify-content: center;
 }
@@ -41,10 +40,10 @@ h1{
 div.app2{
     left: 20%
 }
+
 .btn-load {
     display: inline-block;
-    padding: 7px 7px;
-    font-size: 16px;
+    padding: 1.3% 1.3%;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
@@ -53,6 +52,7 @@ div.app2{
     background-color: #2286aa;
     border: none;
     border-radius: 15px;
+    font-size: calc(14px + 1vw);
 }
 
 .btn-load:hover {background-color: #196480}
