--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 html, body{
     width: 100%;
     height: 100%;
-	background: url("../photo/phon1.jpg");
-	background-size:cover;
+	/*background: url("../photo/phon1.jpg");*/
+	/*background-size:cover;*/
 }
 
 div.app{
