--- a/css/style_load.css
+++ b/css/style_load.css
@@ -5,11 +5,24 @@
     font-family: system-ui;
 }
 
+p{
+    padding: 10px;
+}
+
+#left { position: absolute; left: 0; top: 0; width: 75%; height: 100%}
+#right {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 25%;
+    background: url("../photo/edited.jpg");
+    background-size:cover;
+}
+
 html, body{
     width: 100%;
     height: 100%;
-    /*background: url("../photo/phon1.jpg");*/
-    /*background-size:cover;*/
 }
 
 div.app{
