--- a/css/style_load.css
+++ b/css/style_load.css
@@ -16,7 +16,7 @@ p{
     top: 0;
     height: 100%;
     width: 25%;
-    background: url("../photo/edited.jpg");
+    background: url("../photo/siyanie.jpg");
     background-size:cover;
 }
 
