--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html, body{
     height: 100%;
 	background: url("../photo/edited.jpg");
 	background-size:cover;
+	background-attachment: fixed;
 	color: #ffffff
 }
 
