--- a/css/style_load.css
+++ b/css/style_load.css
@@ -9,7 +9,14 @@ p{
     padding: 10px;
 }
 
-#left { position: absolute; left: 0; top: 0; width: 75%; height: 100%}
+#left {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 75%;
+    height: 100%;
+    background-color: #bfdde7;
+}
 #right {
     position: absolute;
     right: 0;
