--- a/css/preloader.scss
+++ b/css/preloader.scss
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: #add7f6;
+  background: #bfdde7;
   z-index: 2;
   transition: 1s all;
   opacity: 1;
