--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,13 @@ div.app{
     position: relative;
     width: 100%;
     height: 100%;
+	text-align: center;
 }
 
 div.app > h1{
-    position: absolute;
+    position: relative;
     font-size: 50px;
     top: 18%;
-	left: 29%;
 }
 
 div.app > h2{
